apps/home-automation/home-assistant/manifests/home-assistant-internal.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-internal
  namespace: home-automation
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: platform-system
      sectionName: https
  hostnames:
    - home-assistant.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 8123
